--- a/aws_infoblox_unconfig.yml
+++ b/aws_infoblox_unconfig.yml
@@ -24,9 +24,9 @@
       loop: "{{ hostvars[groups['infoblox'][0]].network_interfaces }}"
       when: item.association is defined and item.association.public_ip is defined
 
-    - name: Debug Provider Infoblox Data (Public IP, Username, Password) 
-      debug:
-        var: provider
+    # - name: Debug Provider Infoblox Data (Public IP, Username, Password) 
+    #   debug:
+    #     var: provider
 
     # - name: Delete IPv4 Fixed Address {{ ipv4_address }}
     #   infoblox.nios_modules.nios_fixed_address:
