--- a/aws_infoblox_demo_luis.yml
+++ b/aws_infoblox_demo_luis.yml
@@ -4,6 +4,8 @@
   hosts: localhost
   vars:
     infoblox_host: "34.197.15.22"
+    username: "{{ ansible_user }}"
+    password: "{{ ansible_ssh_pass }}"
     network_view: "MyNetworkView"
     ipv4_network: "192.168.3.96/28"
     ipv4_addr_excluded:
@@ -16,8 +18,8 @@
       set_fact:
         provider:
           host: "{{ infoblox_host }}"
-          username: "{{ ansible_user }}"
-          password: "{{ ansible_ssh_pass }}"
+          username: "{{ username }}"
+          password: "{{ password }}"
 
     - name: Create an IPv4 Network "{{ ipv4_network }}"
       infoblox.nios_modules.nios_network:
