--- a/aws_infoblox_config.yml
+++ b/aws_infoblox_config.yml
@@ -19,7 +19,7 @@
       set_fact:
         provider:
           host: "{{ item.association.public_ip }}"
-          username: "{{ infoblox_username }}"
+          username: "{{ infoblox_user }}"
           password: "{{ infoblox_password }}"
       loop: "{{ hostvars[groups['infoblox'][0]].network_interfaces }}"
       when: item.association is defined and item.association.public_ip is defined
