--- a/roles/utils_hosts_aws/tasks/main.yml
+++ b/roles/utils_hosts_aws/tasks/main.yml
@@ -7,7 +7,8 @@
   set_fact:
     node_name: "{{ item }}"
   loop: "{{ groups['all'] }}"
-  when: hostvars[item].tags is defined and  hostvars[item].tags.Name | regex_search("^infoblox-(.*)$")
+  #when: hostvars[item].tags is defined and  hostvars[item].tags.Name | regex_search("^infoblox-(.*)$")
+  when: hostvars[item].tags is defined and hostvars[item].tags.Name is match("^infoblox-(.*)$")
 
 - name: Add infoblox node to the infoblox group
   add_host:
